--- a/lib/styles/app_theme.html
+++ b/lib/styles/app_theme.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="app-theme">
   <template>
     <style>
-      :host {
+      :root {
         --dark-primary-color: #303F9F;
         --default-primary-color: #3F51B5;
         --light-primary-color: #C5CAE9;
