--- a/lib/styles/app_theme.html
+++ b/lib/styles/app_theme.html
@@ -11,11 +11,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="app-theme">
   <template>
     <style>
+
+      /*
+       Polymer includes a shim for CSS Custom Properties that we can use for application theming.
+       Below, you'll find the default palette for the Polymer Starter Kit layout. Feel free to play
+       with changing the colors used or generate your own palette of colours at MaterialPalette.com.
+
+       See https://www.polymer-project.org/1.0/docs/devguide/styling.html#xscope-styling-details
+       for further information on custom CSS properties.
+       */
+
+      /* Application theme */
+
       :root {
         --dark-primary-color: #303F9F;
         --default-primary-color: #3F51B5;
         --light-primary-color: #C5CAE9;
-        --text-primary-color: white;
+        --text-primary-color: #ffffff; /*text/icons*/
         --accent-color: #FF4081;
         --primary-background-color: #c5cae9;
         --primary-text-color: #212121;
@@ -26,12 +38,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         /* Components */
 
         /* paper-drawer-panel */
-        --drawer-menu-color: white;
+        --drawer-menu-color: #ffffff;
         --drawer-border-color: 1px solid #ccc;
         --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
 
         /* paper-menu */
-        --paper-menu-background-color: white;
+        --paper-menu-background-color: #fff;
         --menu-link-color: #111111;
       }
 
@@ -65,29 +77,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: var(--default-primary-color);
       }
 
-      /*paper-menu a {*/
-        /*text-decoration: none;*/
-        /*color: var(--menu-link-color);*/
-        /*display: -ms-flexbox;*/
-        /*display: -webkit-flex;*/
-        /*display: flex;*/
-        /*-ms-flex-direction: row;*/
-        /*-webkit-flex-direction: row;*/
-        /*flex-direction: row;*/
-        /*-ms-flex-align: center;*/
-        /*-webkit-align-items: center;*/
-        /*align-items: center;*/
-        /*font-family: 'Roboto', 'Noto', sans-serif;*/
-        /*-webkit-font-smoothing: antialiased;*/
-        /*text-rendering: optimizeLegibility;*/
-        /*font-size: 14px;*/
-        /*font-weight: 400;*/
-        /*line-height: 24px;*/
-        /*min-height: 48px;*/
-        /*padding: 0 16px;*/
-      /*}*/
-
-      paper-menu paper-icon-item {
+      paper-menu a {
+        @apply(--layout-horizontal);
+        @apply(--layout-center);
+        text-decoration: none;
         color: var(--menu-link-color);
         font-family: 'Roboto', 'Noto', sans-serif;
         -webkit-font-smoothing: antialiased;
@@ -97,7 +90,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         line-height: 24px;
         min-height: 48px;
         padding: 0 16px;
-        cursor: default;
       }
 
       paper-toolbar.tall .app-name {
@@ -130,6 +122,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 900px;
       }
 
+      #toast .toast-hide-button {
+        color: #eeff41;
+        margin: 10px;
+      }
+
       /* Breakpoints */
 
       /* Small */
@@ -149,14 +146,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         #drawer .paper-toolbar {
           margin-left: 16px;
-        }
-
-        #overlay {
-          min-width: 360px;
-        }
-
-        .bg {
-          background: white;
         }
 
       }
