updated Polymer to latest RC

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
   <body unresolved class="fullbleed">
     <main-app class="fit layout vertical"></main-app>
 
-    <script type="application/dart" src="index.dart"></script>
+    <script src="index.dart" type="application/dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
